--- a/style.css
+++ b/style.css
@@ -40,3 +40,59 @@
     margin-top: 5px;
 }
 
+.nav{
+    box-shadow: 0px 1px 1px lightgray;
+   width: 100%;
+   height: 80px;
+   display: flex;
+   justify-content: center;
+   gap: 15px;
+   font-size: 20px;
+}
+.navchild{
+    box-shadow: 0px 1px 1px lightgray;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+}
+h1{
+    padding-left: 267px;
+}
+
+.parent{
+    width: 800px;
+    margin: 12px auto;
+    min-height: 400px;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 12px;
+    grid-template-rows: repeat(3, minmax(100px, 200px));
+}
+
+.parent>div :hover{
+    transform: scale(1.04) !important;
+}
+.aa{
+    grid-column: 1 / 3;
+    grid-row: 1 / 3;
+}
+.cc{
+    height: 250px;
+}
+.ff{
+    margin-top: 50px;
+    height: 100px;
+
+}
+.nav>div{
+    border: 10x solid black;
+    align-items: center;
+}
+.nav>div:hover{
+    background-color: aquamarine;
+    cursor: pointer;
+    
+}
+
